# cmake_learning

./: README.md  compilation_process_of_cpp.md
Foo/: CMakeLists.txt
Foo/common/: config.h.in
Foo/include/: config.h
Foo/src/: foo.cpp  main.cpp
Step1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
Step1_build/: CMakeCache.txt  Makefile  Tutorial  TutorialConfig.h  cmake_install.cmake
Step2/: CMakeLists.txt
Step2/MathFunctions/: mysqrt.cxx
Step2_build/: CMakeCache.txt  Makefile  Tutorial  TutorialConfig.h  cmake_install.cmake
Step2_build/MathFunctions/: Makefile  cmake_install.cmake
Step3/: CMakeLists.txt  tutorial.cxx
Step3/MathFunctions/: CMakeLists.txt
Step3_build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
Step3_build/MathFunctions/: Makefile  cmake_install.cmake
Step4/: CMakeLists.txt
Step4/MathFunctions/: CMakeLists.txt
Step4_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
Step4_build/MathFunctions/: Makefile  cmake_install.cmake
Step4_build/Testing/Temporary/: CTestCostData.txt
Step5/: CMakeLists.txt
Step5/MathFunctions/: CMakeLists.txt  mysqrt.cxx
Step5_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  Tutorial  cmake_install.cmake
Step5_build/MathFunctions/: Makefile  cmake_install.cmake
Step5_build/Testing/Temporary/: CTestCostData.txt
Step6/MathFunctions/: CMakeLists.txt  MakeTable.cxx
Step6_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  Tutorial  TutorialConfig.h  cmake_install.cmake
Step6_build/MathFunctions/: Makefile  cmake_install.cmake
Step7/: CMakeLists.txt  TutorialConfig.h.in
Step7/MathFunctions/: CMakeLists.txt  mysqrt.cxx
